Fixed the alignment of text and icons in the menu-bar

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -72,16 +72,18 @@ body {
   .menu-bar-content-item {
     display: flex;
     flex-direction: row;
+    align-items: center;
     padding: 7px 8px 7px 16px;
     .menu-bar-content-item-icon {
+      padding: 7px 8px 7px 16px;
       // fill: $menu-bar-content;
     }
     .menu-bar-content-item-text {
       text-decoration: none;
       font-size: 25px;
+      text-align: center;
       color: $menu-bar-content;
       display: block;
-      padding-top: 0.35rem;
       padding-left: 2rem;
     }
     &:hover {
